# api-monitoramento-saude

./: .gitignore  Dockerfile  README.md  TODO.txt  docker-compose.yml  flyway.toml  pyproject.toml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: relacao.py
app/core/: auth.py  auth_deps.py  config.py  logging.py  middleware.py
app/db/repositories/: metricas_repo.py  relacao_repo.py
app/models/: individuo_evento.py  individuo_identificador.py  metricas_diarias.py
app/services/: exceptions.py  relacao_service.py
db/migration/: V0__create_schema.sql  V1__init_schema.sql  V2__adicionar_chave_unica_ids.sql  V3__adicionar_metodo_identificacao.sql  V4__adicionar_registro_origem.sql  V5__adicionar_sinan_enum.sql  V6__adidionar_coluna_metodo_identificacao.sql  V7__corrigir_metricas_diarias_endpoint.sql  V8__adicionar_coluna_gera_alerta.sql
scripts/: export_data.sql  exportar_parquet.sql  load_parquet.py  start.sh  stats_alertas_violencia.sql
tests/: test_hmac.py
