[project]
name = "api-monitoramento-saude"
version = "0.1.0"
description = "API para monitoramento de eventos e indicadores de saúde"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "MIT"
authors = [
    { name = "Vital Strategies Brazil" }
]

dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<0.31",
    "pydantic-settings>=2.6,<2.7",
    "sqlalchemy>=2.0.36,<2.1",
    "psycopg[binary]>=3.2,<3.3",
    "orjson>=3.10,<3.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<8.4",
    "httpx>=0.27,<0.28",
    "mypy>=1.13,<1.14",
]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["db*"]
